# rust_term

./: Cargo.toml  README.md  a.out  wl.c
src/: helper.rs  main.rs  signal.rs  simply_wayland.rs  types.rs
