[package]
name = "rust_term"
version = "0.1.0"
authors = ["Sawyer Bergeron <sawyerbergeron@gmail.com>"]
edition = "2018"

[dependencies]
#vulkano = "0.13"
#wayland-egl = "0.24.1"
#wayland-client = "0.24.1"
#wayland-cursor = "0.24.1"
#wayland-commons = "0.24.1"
#wayland-protocols = "0.24.1"
#wayland-sys = "0.24.1"
#byteorder = "*"
#tempfile = "*"
simply_wayland = { path = "../simply_wayland" }
lockfree = "*"
once_cell = "*"
num_enum = "0.4.2"
